--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,8 +26,8 @@
                 android:gravity="center_vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/_17sdp"
-                    android:layout_height="@dimen/_17sdp"
+                    android:layout_width="@dimen/_16sdp"
+                    android:layout_height="@dimen/_16sdp"
                     android:layout_marginTop="@dimen/_3sdp"
                     android:src="@drawable/ic_fav" />
 
@@ -43,7 +43,7 @@
                     android:layout_height="@dimen/_12sdp"
                     android:layout_alignParentRight="true"
                     android:gravity="center"
-                    android:text="1"
+                    android:text="0"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_8sdp"
                     android:textStyle="bold" />
@@ -57,8 +57,8 @@
                 android:gravity="center_vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/_18sdp"
-                    android:layout_height="@dimen/_18sdp"
+                    android:layout_width="@dimen/_16sdp"
+                    android:layout_height="@dimen/_16sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:src="@drawable/ic_cart" />
 
@@ -89,45 +89,59 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="@dimen/_25sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:padding="@dimen/_4sdp"
-                android:src="@drawable/ic_location"
-                android:tint="@color/grey" />
-
             <LinearLayout
                 android:id="@+id/locationLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/_6sdp"
-                android:gravity="center|left"
-                android:orientation="vertical">
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingRight="@dimen/_8sdp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/quicksand"
-                    android:gravity="center"
-                    android:text="Your Location"
-                    android:textColor="#8b8b8b"
-                    android:textSize="@dimen/_8sdp" />
+                <ImageView
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:clickable="false"
+                    android:padding="@dimen/_4sdp"
+                    android:src="@drawable/ic_location"
+                    android:tint="@color/grey" />
 
-                <TextView
-                    android:id="@+id/locationTextView"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/quicksand_medium"
-                    android:gravity="left|center"
-                    android:inputType="textCapWords"
-                    android:maxEms="30"
-                    android:maxLines="1"
-                    android:text="Madhapur Petrol Pump..."
-                    android:textColor="#33383f"
-                    android:textSize="@dimen/_11sdp"
-                    android:textStyle="bold"
-                    app:fontFamily="@font/quicksand_medium" />
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/_6sdp"
+                    android:clickable="false"
+                    android:gravity="center|left"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="false"
+                        android:fontFamily="@font/quicksand"
+                        android:gravity="center"
+                        android:text="Your Location"
+                        android:textColor="#8b8b8b"
+                        android:textSize="@dimen/_8sdp" />
+
+                    <TextView
+                        android:id="@+id/locationTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="false"
+                        android:fontFamily="@font/quicksand_medium"
+                        android:gravity="left|center"
+                        android:inputType="textCapWords"
+                        android:maxEms="30"
+                        android:maxLines="1"
+                        android:text="Madhapur Petrol Pump..."
+                        android:textColor="#33383f"
+                        android:textSize="@dimen/_11sdp"
+                        android:textStyle="bold"
+                        app:fontFamily="@font/quicksand_medium" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
