--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -8,45 +8,47 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_6sdp"
-        android:layout_marginRight="@dimen/_6sdp"
-        android:orientation="vertical">
+        android:background="@color/background_color"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/_6sdp"
+        android:paddingRight="@dimen/_6sdp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_25sdp"
-            android:layout_marginLeft="@dimen/_6sdp"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginRight="@dimen/_6sdp"
-            android:gravity="center">
+            android:background="@color/white"
+            android:gravity="center"
+            android:paddingLeft="@dimen/_6sdp"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingRight="@dimen/_6sdp"
+            android:paddingBottom="@dimen/_5sdp">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Top Offers"
                 android:id="@+id/categoryNameTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="Top Offers"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12sdp" />
 
             <TextView
+                android:id="@+id/viewAllTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="View all > "
-                android:visibility="invisible"
-                android:id="@+id/viewAllTextView"
-                android:textSize="@dimen/_11sdp" />
+                android:textSize="@dimen/_11sdp"
+                android:visibility="invisible" />
 
         </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_6sdp"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:background="@color/background_color"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/productsRecyclerView"
