--- a/app/src/main/res/layout/order_products_item.xml
+++ b/app/src/main/res/layout/order_products_item.xml
@@ -2,91 +2,64 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
     android:background="@color/background_color"
     android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/itemLayout"
-        android:layout_width="@dimen/_110sdp"
+        android:layout_width="@dimen/_200sdp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_6sdp"
         android:layout_marginRight="@dimen/_4sdp"
         android:background="@color/white"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/_8sdp">
+        android:orientation="horizontal">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/productImageView"
+            android:layout_width="@dimen/_60sdp"
+            android:layout_height="@dimen/_60sdp"
+            android:layout_centerInParent="true"
+            android:background="#989898"
+            android:src="#989898" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/background_color"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/productImageView"
-                android:layout_width="@dimen/_110sdp"
-                android:layout_height="@dimen/_100sdp"
-                android:layout_centerInParent="true"
-                android:src="#989898" />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/productNameTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_2sdp"
-            android:layout_marginRight="@dimen/_2sdp"
-            android:maxLines="2"
-            android:minHeight="@dimen/_35sdp"
-            android:paddingLeft="@dimen/_3sdp"
-            android:text="Freedom Refined Sunflower"
-            android:textSize="@dimen/_11sdp" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_2sdp"
-            android:orientation="horizontal">
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/offerCostTextView"
-                android:layout_width="wrap_content"
+                android:id="@+id/productNameTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:layout_marginRight="@dimen/_2sdp"
-                android:gravity="left|center_vertical"
+                android:fontFamily="@font/poppins_medium"
+                android:maxLines="2"
                 android:paddingLeft="@dimen/_3sdp"
-                android:text="₹350"
-                android:textSize="@dimen/_10sdp" />
+                android:text="Freedom Refined Sunflower"
+                android:textSize="@dimen/_9sdp" />
 
-            <TextView
-                android:id="@+id/costTextView"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/_2sdp"
-                android:background="@drawable/strike_through"
-                android:gravity="center|right"
-                android:paddingLeft="@dimen/_3sdp"
-                android:text="₹420"
-                android:textSize="@dimen/_10sdp"
-                android:visibility="gone" />
+                android:layout_marginTop="@dimen/_2sdp"
+                android:orientation="horizontal">
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/offerCostTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/_2sdp"
+                    android:fontFamily="@font/poppins"
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="@dimen/_3sdp"
+                    android:text="₹350"
+                    android:textSize="@dimen/_10sdp" />
 
-        <TextView
-            android:id="@+id/addImageView"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_22sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:background="@color/green"
-            android:gravity="center"
-            android:text="ADD"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_12sdp"
-            android:visibility="gone" />
+            </RelativeLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
