--- a/app/src/main/res/layout/fragment_offers.xml
+++ b/app/src/main/res/layout/fragment_offers.xml
@@ -19,11 +19,11 @@
                 android:layout_height="@dimen/_150sdp"
                 android:background="@drawable/veg" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_130sdp"
-                android:layout_margin="@dimen/_10sdp"
-                android:background="#e8e8e8" />
+            <!--    <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_130sdp"
+                    android:layout_margin="@dimen/_10sdp"
+                    android:background="#e8e8e8" />-->
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/homeRecyclerView"
