--- a/app/src/main/res/layout/order_products_list_item.xml
+++ b/app/src/main/res/layout/order_products_list_item.xml
@@ -24,16 +24,17 @@
                 android:id="@+id/productNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
                 android:text="Salt 1 Kg"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp" />
+                android:textSize="@dimen/_11sdp" />
 
             <TextView
                 android:id="@+id/countTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Qty: 1"
-                android:textSize="@dimen/_11sdp" />
+                android:textSize="@dimen/_10sdp" />
 
         </LinearLayout>
 
