--- a/app/src/main/res/layout/order_products_item.xml
+++ b/app/src/main/res/layout/order_products_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/background_color"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -10,9 +10,9 @@
         android:id="@+id/itemLayout"
         android:layout_width="@dimen/_200sdp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/_4sdp"
         android:background="@color/white"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingRight="@dimen/_4sdp">
 
         <ImageView
             android:id="@+id/productImageView"
