--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,24 +11,54 @@
         android:paddingTop="@dimen/_5sdp"
         android:paddingBottom="@dimen/_5sdp">
 
-        <EditText
-            android:id="@+id/searchEditText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_30sdp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginRight="@dimen/_10sdp"
             android:background="@drawable/box"
-            android:drawableLeft="@drawable/arrow_left"
-            android:drawableRight="@drawable/close"
-            android:drawablePadding="@dimen/_4sdp"
-            android:drawableTint="#989898"
-            android:enabled="true"
-            android:focusable="true"
-            android:fontFamily="@font/poppins"
-            android:hint="Search Here"
-            android:paddingLeft="@dimen/_6sdp"
-            android:textSize="@dimen/_11sdp" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/backImageView"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:padding="@dimen/_3sdp"
+                android:tint="#696868"
+                android:src="@drawable/arrow_left" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical">
+
+                <EditText
+                    android:id="@+id/searchEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_toLeftOf="@id/closeImageView"
+                    android:background="@null"
+                    android:enabled="true"
+                    android:focusable="true"
+                    android:fontFamily="@font/poppins"
+                    android:hint="Search Here"
+                    android:paddingLeft="@dimen/_6sdp"
+                    android:textSize="@dimen/_11sdp" />
+
+                <ImageView
+                    android:id="@+id/closeImageView"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:padding="@dimen/_3sdp"
+                    android:src="@drawable/close" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/productsRecyclerView"
