--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -27,6 +27,7 @@
                 android:id="@+id/categoryNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
                 android:gravity="center_vertical"
                 android:text="Top Offers"
                 android:textColor="@color/black"
